# roa

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  cover.sh  grcov.yml  rust-toolchain  rustfmt.toml
.github/workflows/: clippy.yml  code-coverage.yml  nightly-test.yml  release.yml  security-audit.yml  stable-test.yml
assets/: author.txt  cert.pem  key.pem  welcome.html
assets/css/: table.css
examples/: echo.rs  file-upload.rs  hello-world.rs  https.rs  restful-api.rs  serve-file.rs  websocket-echo.rs  welcome.rs
integration-tests/: restful.rs  serve-file.rs
integration/diesel-example/: Cargo.toml  README.md
integration/diesel-example/src/: data_object.rs  endpoints.rs  lib.rs  models.rs
integration/diesel-example/tests/: restful.rs
integration/juniper-example/: Cargo.toml  README.md
integration/juniper-example/src/: main.rs  models.rs
integration/multipart-example/: Cargo.toml  README.md
integration/multipart-example/assets/: index.html
integration/multipart-example/src/: main.rs
integration/multipart-example/tests/: upload.rs
integration/websocket-example/: Cargo.toml  package.json  tsconfig.json
integration/websocket-example/frontend/: index.html  index.tsx
integration/websocket-example/src/: main.rs
nightly/: async-closure.rs
roa/: Cargo.toml  README.md
roa-async-std/: Cargo.toml  README.md
roa-async-std/src/: lib.rs  listener.rs  net.rs  runtime.rs
roa-basic/: Cargo.toml
roa-body/: Cargo.toml  README.md
roa-body/src/: content_type.rs  decode.rs  file.rs  help.rs  json.rs  lib.rs  multipart.rs  urlencoded.rs
roa-body/src/file/: content_disposition.rs  help.rs
roa-cookie/: Cargo.toml
roa-cookie/src/: lib.rs
roa-core/: Cargo.toml  README.md
roa-core/src/: app.rs  body.rs  context.rs  err.rs  executor.rs  group.rs  handler.rs  join.rs  lib.rs  middleware.rs  model.rs  next.rs  request.rs  response.rs  state.rs
roa-core/src/app/: executor.rs  future.rs  pool.rs  runtime.rs  stream.rs  tcp.rs
roa-core/src/context/: storage.rs
roa-core/src/handler/: middleware.rs  status_handler.rs
roa-core/src/response/: body.rs
roa-cors/: Cargo.toml
roa-diesel/: Cargo.toml  README.md
roa-diesel/src/: async_ext.rs  err.rs  lib.rs  pool.rs
roa-forward/: Cargo.toml
roa-jsonrpc/: Cargo.toml  README.md
roa-jsonrpc/src/: lib.rs
roa-juniper/: Cargo.toml  README.md
roa-juniper/src/: lib.rs
roa-jwt/: Cargo.toml
roa-jwt/src/: lib.rs
roa-logger/: Cargo.toml
roa-middlewares/: Cargo.toml
roa-middlewares/src/: jwt.rs  lib.rs  query_parser.rs
roa-multipart/: Cargo.toml  README.md
roa-multipart/src/: lib.rs
roa-pg/: Cargo.toml  README.md
roa-pg/src/: lib.rs  tls.rs
roa-proc-macro/: Cargo.toml
roa-proc-macro/src/: dynamic_path.rs  lib.rs
roa-query/: Cargo.toml
roa-query/src/: lib.rs
roa-router/: Cargo.toml  README.md
roa-router/src/: endpoint.rs  endpoints.rs  err.rs  lib.rs  parse.rs  path.rs
roa-router/src/endpoints/: dispatcher.rs  guard.rs
roa-sled/: Cargo.toml
roa-sqlx/: Cargo.toml
roa-tcp/: Cargo.toml  README.md
roa-tcp/src/: exec.rs  incoming.rs  lib.rs  listen.rs
roa-tls/: Cargo.toml  README.md
roa-tls/src/: lib.rs
roa-tokio/: Cargo.toml  README.md
roa-tokio/src/: lib.rs  net.rs  runtime.rs
roa-websocket/: Cargo.toml  README.md
roa-websocket/src/: lib.rs
roa/src/: body.rs  compress.rs  cookie.rs  cors.rs  diesel.rs  forward.rs  header.rs  jsonrpc.rs  jwt.rs  lib.rs  logger.rs  pg.rs  query.rs  router.rs  stream.rs  tcp.rs  tls.rs  tokio.rs  websocket.rs
roa/src/body/: file.rs
roa/src/body/file/: content_disposition.rs  help.rs
roa/src/diesel/: async_ext.rs  err.rs  pool.rs
roa/src/pg/: client.rs  tls.rs
roa/src/router/: endpoints.rs  err.rs  path.rs
roa/src/router/endpoints/: dispatcher.rs  guard.rs
roa/src/tcp/: incoming.rs  listen.rs  listener.rs
roa/src/tls/: incoming.rs  listener.rs
roa/src/tokio/: net.rs  runtime.rs
roa/templates/: user.html
src/: app.rs  body.rs  compress.rs  context.rs  cookie.rs  cors.rs  err.rs  executor.rs  forward.rs  group.rs  handler.rs  header.rs  jwt.rs  lib.rs  logger.rs  middleware.rs  model.rs  next.rs  query.rs  request.rs  response.rs  router.rs  service.rs  status_handler.rs
src/app/: app.rs  static_app.rs
src/body/: decode.rs  json.rs  mime_ext.rs  urlencoded.rs
src/handler/: middleware.rs  status_handler.rs
src/router/: controller.rs  endpoint.rs  err.rs  path.rs
templates/: directory.html
tests/: logger.rs  restful.rs  serve-file.rs
