[package]
name = "roa-root"
version = "0.5.0-alpha"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "roa",
    "roa-tcp",
    "roa-tls",
    "roa-core",
    "roa-diesel",
    "roa-body",
    "roa-multipart",
    "roa-router",
    "roa-websocket",
    "roa-juniper",
    "integration/diesel-example",
    "integration/multipart-example",
    "integration/websocket-example",
    "integration/juniper-example"
]

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json", "cookies", "gzip"] }
async-std = { version = "1.5.0", features = ["attributes"] }
pretty_env_logger = "0.3"
serde = { version = "1", features = ["derive"] }
roa = { path = "./roa", features = ["full"] }
test-case = "1.0.0"
lazy_static = "1.4.0"
slab = "0.4.2"
multimap = "0.8.0"
hyper = "0.13"
chrono = "0.4"
mime = "0.3"
encoding = "0.2"
askama = "0.9"
http = "0.2"
bytesize = "1.0"
serde_json = "1.0"
log = "0.4"
futures = "0.3"