[package]
name = "roa-root"
version = "0.6.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "roa",
    "roa-core",
    "roa-diesel",
    "roa-async-std",
    "roa-juniper",
    "integration/diesel-example",
    "integration/multipart-example",
    "integration/websocket-example",
    "integration/juniper-example"
]

[dev-dependencies]
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
serde = { version = "1", features = ["derive"] }
roa = { path = "./roa", features = ["full"] }
test-case = "1.2"
once_cell = "1.8"
log = "0.4"
slab = "0.4.2"
multimap = "0.8.0"
hyper = "0.14"
mime = "0.3"
encoding = "0.2"
askama = "0.10"
http = "0.2"
bytesize = "1.1"
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"
doc-comment = "0.3.3"
anyhow = "1.0"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
