[package]
authors = ["Hexilee <i@hexilee.me>"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server",
]
description = "tokio-based runtime and acceptor"
documentation = "https://docs.rs/roa-tokio"
edition = "2018"
homepage = "https://github.com/Hexilee/roa/wiki"
keywords = ["http", "web", "framework", "async"]
license = "MIT"
name = "roa-async-std"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
version = "0.6.0"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tracing = "0.1"
roa = {path = "../roa", version = "0.6.0", default-features = false}
async-std = {version = "1.10", features = ["unstable"]}
futures-timer = "3.0"

[dev-dependencies]
reqwest = "0.11"
roa = {path = "../roa", version = "0.6.0"}
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tokio = { version = "1.15", features = ["full"] }
async-std = {version = "1.10", features = ["attributes", "unstable"]}

[features]
docs = ["roa/docs"]
