[package]
name = "roa-body"
version = "0.5.0-alpha"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
log = "0.4"
futures = "0.3"
async-std = "1.4"
mime = "0.3"

roa-core = { path = "../roa-core", version = "0.5.0-alpha" }
bytes = { version = "0.5", optional = true }
actix-http = { version = "1.0", optional = true }
actix-multipart = { version = "0.2", optional = true }
serde = { version = "1", optional = true }
askama = { version = "0.9", optional = true }
serde_json = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.6", optional = true }
encoding = { version = "0.2", optional = true }
mime_guess = { version = "2.0", optional = true }
percent-encoding = { version = "2.1.0", optional = true }

[dev-dependencies]
test-case = "1.0.0"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json", "cookies", "gzip"] }
roa-core = { path = "../roa-core", version = "0.5.0-alpha", features = ["runtime"] }

[features]
default = []
full = ["json", "urlencoded", "multipart", "file", "template"]
json = ["serde", "serde_json", "encoding"]
urlencoded = ["serde", "serde_urlencoded"]
multipart = ["actix-multipart", "actix-http", "bytes"]
file = ["mime_guess", "actix-http", "percent-encoding"]
template = ["askama"]
