[package]
name = "roa-body"
version = "0.5.0-beta.2"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-body"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "An extension crate for roa."
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server"]
exclude = ["templates/"]

[package.metadata.docs.rs]
features = ["full"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
codecov = { repository = "Hexilee/roa" }

[dependencies]
log = "0.4"
futures = "0.3"
bytes = "0.5.4"
lazy_static = "1.4"
roa-core = { path = "../roa-core", version = "0.5.0-beta" }
async-std = { version = "1.5", optional = true }
serde = { version = "1", optional = true }
askama = { version = "0.9", optional = true }
serde_json = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.6", optional = true }
mime_guess = { version = "2.0", optional = true }
percent-encoding = { version = "2.1.0", optional = true }

[dev-dependencies]
test-case = "1.0.0"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json", "cookies", "gzip"] }
async-std = "1.5"
roa-tcp = { path = "../roa-tcp", version = "0.5.0-beta" }
roa-core = { path = "../roa-core", version = "0.5.0-beta", features = ["runtime"] }
mime = "0.3"

[features]
default = []
full = ["json", "urlencoded", "file", "template"]
json = ["serde", "serde_json"]
urlencoded = ["serde", "serde_urlencoded"]
file = ["mime_guess", "percent-encoding", "async-std"]
template = ["askama"]
