[package]
name = "roa-cookie"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.1" }
http = "0.2"
async-trait = "0.1.22"
cookie = { version = "0.12", features = ["percent-encode"] }