[package]
name = "roa-core"
version = "0.5.0-beta.2"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-core"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "core components of roa web framework"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server"]


[package.metadata.docs.rs]
features = ["full"]

[badges]
codecov = { repository = "Hexilee/roa" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
bytes = "0.5"
http = "0.2"
hyper = { version = "0.13", default-features = false, features = ["stream"] }
log = "0.4"
tokio = "0.2.13"
async-trait = "0.1.24"
async-std = { version = "1.5", features = ["unstable"], optional = true }

[dev-dependencies]
tokio = { version = "0.2.13", features = ["rt-threaded", "blocking", "macros"] }

[features]
full = ["tokio-rt", "async-rt"]
tokio-rt = ["tokio/rt-threaded", "tokio/blocking"]
async-rt = ["async-std"]
