[package]
name = "roa-core"
version = "0.6.0"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-core"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "core components of roa web framework"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server"]


[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[badges]
codecov = { repository = "Hexilee/roa" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
bytes = "1.1"
http = "0.2"
hyper = { version = "0.14", default-features = false, features = ["stream", "server", "http1", "http2"] }
tracing = "0.1"
tokio = "1.15"
async-trait = "0.1.51"
crossbeam-queue = "0.3"

[dev-dependencies]
tokio = { version = "1.15", features = ["fs", "macros", "rt"] }

[features]
runtime = ["tokio/rt"]
docs = ["runtime"]
