[package]
name = "roa-diesel"
version = "0.5.0-alpha"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["extras"] }
r2d2 = "0.8"
roa-core = { path = "../roa-core", version = "0.5.0-alpha" }
