[package]
name = "roa-diesel"
version = "0.5.0-rc"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-diesel"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "diesel integration for roa"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["extras"] }
r2d2 = "0.8"
roa-core = { path = "../roa-core", version = "0.5.0-rc" }

[dev-dependencies]
diesel = { version = "1.4", features = ["extras", "sqlite"] }