[package]
name = "roa-jsonrpc"
version = "0.5.0-alpha"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-jsonrpc"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "jsonrpc integration for roa"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa = { path = "../roa", version = "0.5", default-features = false, features = ["json"] }
futures = "0.3"
jsonrpc-v2 = { version = "0.5", default-features = false }
bytes = "0.5"

