[package]
name = "roa-juniper"
version = "0.5.0-alpha"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-alpha" }
roa-body = { path = "../roa-body", version = "0.5.0-alpha", features = ["json"] }
futures = "0.3.4"

[dependencies.juniper]
git = "https://github.com/graphql-rust/juniper.git"
version = "0.14.2"
default-features = false
features = ["async"]