[package]
name = "roa-juniper"
version = "0.5.0-alpha"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-juniper"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "juniper integration for roa"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-alpha" }
roa-body = { path = "../roa-body", version = "0.5.0-alpha", features = ["json"] }
futures = "0.3.4"

[dependencies.juniper]
git = "https://github.com/graphql-rust/juniper.git"
version = "0.14.2"
default-features = false
features = ["async"]