[package]
name = "roa-jwt"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.1" }
jsonwebtoken = "6"
serde = "1"
async-trait = "0.1.22"
http = "0.2"

[dev-dependencies]
tokio = {version = "0.2", features = ["full"]}
serde = {version = "1.0", features = ["derive"] }