[package]
name = "roa-multipart"
version = "0.5.0-rc.5"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-multipart"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "multipart implementation for roa"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server"]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-rc.5" }
hyper = { version = "0.13", default-features = false, features = ["stream"] }
bytes = "0.5"
actix-http = "1.0"
actix-multipart = "0.2"
futures = "0.3"

[dev-dependencies]
roa = { path = "../roa", version = "0.5.0-rc.7", features = ["router"] }
tokio = { version = "0.2", features = ["full"] }
reqwest = { git = "https://github.com/Hexilee/reqwest.git", version = "0.10" }
async-std = "1.5"

[features]
docs = []
