[package]
name = "roa-pg"
version = "0.5.0-rc.2"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-pg"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "tokio-postgres integration with roa framework"
keywords = ["http", "web", "framework", "database"]
categories = ["database"]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.3"
futures = "0.3.4"
roa = { path = "../roa", version = "0.5.0-rc.3", default-features = false }
tokio-postgres = { version = "0.5.2", default-features = false }
tokio = "0.2.13"
async-std = "1.5"
tokio-rustls = { version = "0.13.0", features = ["unstable"] }
webpki = "0.21.2"

[dev-dependencies]
async-std = { version = "1.5", features = ["attributes"] }
roa = { path = "../roa", version = "0.5.0-rc.3" }

[features]
docs = ["roa/docs"]
