[package]
name = "roa-proc-macro"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
http = "0.2"
regex = "1.2"
proc-macro-hack = "0.5.11"

[lib]
proc-macro = true
