[package]
name = "roa-router"
version = "0.5.0-alpha"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-alpha" }
radix_trie = "0.1.6"
regex = "1.3"
percent-encoding = "2.1"
http = "0.2"

[dev-dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-alpha", features = ["runtime"] }
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json", "cookies", "gzip"] }
async-std = { version = "1.5.0", features = ["attributes"] }
pretty_env_logger = "0.3"
serde = { version = "1", features = ["derive"] }
test-case = "1.0.0"
encoding = "0.2.33"
