[package]
name = "roa-router"
version = "0.5.0-beta"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-router"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "router implementation for roa"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-beta" }
radix_trie = "0.1.6"
regex = "1.3"
percent-encoding = "2.1"

[dev-dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-beta", features = ["runtime"] }
roa-tcp = { path = "../roa-tcp", version = "0.5.0-beta" }
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json", "cookies", "gzip"] }
async-std = { version = "1.5.0", features = ["attributes"] }
pretty_env_logger = "0.3"
test-case = "1.0.0"
encoding = "0.2.33"
