[package]
name = "roa-sled"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.31"
bincode = "1.2.1"
roa-core = { path = "../roa-core", version = "0.5.0-alpha" }
serde = "1.0.104"
