[package]
name = "roa-tcp"
version = "0.5.0-alpha"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-alpha" }
futures-timer = "3.0"
hyper = { version = "0.13", default-features = false }
async-std = "1.5.0"
futures = "0.3"
log = "0.4"