[package]
name = "roa-tcp"
version = "0.5.0-alpha"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-alpha" }
futures-timer = "3.0"
async-std = "1.5.0"
futures = "0.3"
log = "0.4"

[dev-dependencies]
reqwest = "0.10"
async-std = "1.5.0"
tokio = { version = "0.2", features = ["full"] }
