[package]
name = "roa-tcp"
version = "0.5.0-beta"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-tcp"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "tcp based acceptor for roa"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-beta" }
futures-timer = "3.0"
async-std = "1.5.0"
futures = "0.3"
log = "0.4"

[dev-dependencies]
reqwest = "0.10"
async-std = "1.5.0"
tokio = { version = "0.2", features = ["full"] }
roa-core = { path = "../roa-core", version = "0.5.0-beta", features = ["runtime"] }
