[package]
name = "roa-tls"
version = "0.5.0-alpha"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-alpha" }
roa-tcp = { path = "../roa-tcp", version = "0.5.0-alpha" }
futures = "0.3"
rustls = "0.16.0"
async-tls = "0.6.0"
async-std = "1.5.0"

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
tokio = { version = "0.2", features = ["full"] }
roa-core = { path = "../roa-core", version = "0.5.0-alpha", features = ["runtime"] }
roa-body = { path = "../roa-body", version = "0.5.0-alpha" }
tokio-tls = "0.3.0"
hyper-tls = "0.4.1"
hyper = "0.13.2"

