[package]
name = "roa-tls"
version = "0.5.0-rc"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-tls"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "tls based acceptor for roa"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-rc" }
roa-tcp = { path = "../roa-tcp", version = "0.5.0-rc" }
futures = "0.3"
rustls = "0.17.0"
tokio-rustls = "0.13.0"
tokio = "0.2.13"
bytes = "0.5.4"

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
tokio = { version = "0.2", features = ["full"] }
roa-core = { path = "../roa-core", version = "0.5.0-rc", features = ["runtime"] }
tokio-tls = "0.3.0"
hyper-tls = "0.4.1"
hyper = "0.13.2"
doc-comment = "0.3.3"

