[package]
name = "roa-tokio"
version = "0.5.0-rc.1"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-tokio"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "tokio-based runtime and acceptor"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server"]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
roa = { path = "../roa", version = "0.5.0-rc.3", default-features = false }
log = "0.4"
futures = "0.3"

[dev-dependencies]
roa = { path = "../roa", version = "0.5.0-rc.3" }
reqwest = "0.10"

[features]
docs = ["roa/docs"]

