[package]
authors = ["Hexilee <i@hexilee.me>"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server",
]
description = "tokio-based runtime and acceptor"
documentation = "https://docs.rs/roa-tokio"
edition = "2018"
homepage = "https://github.com/Hexilee/roa/wiki"
keywords = ["http", "web", "framework", "async"]
license = "MIT"
name = "roa-tokio"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
version = "0.6.0-alpha"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tracing = "0.1"
roa = {path = "../roa", version = "0.6.0", default-features = false}
tokio = {version = "1.13", features = ["full"]}

[dev-dependencies]
reqwest = "0.11"
roa = {path = "../roa", version = "0.6.0"}

[features]
docs = ["roa/docs"]
