[package]
name = "roa-websocket"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = "0.4.0"
roa-core = { path = "../roa-core", version = "0.5.0-alpha" }
async-std = "1.5.0"
