[package]
name = "roa-websocket"
version = "0.5.0-alpha"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-alpha" }
async-std = "1.5"
hyper = { version = "0.13", default-features = false, features = ["stream"] }
headers = "0.3.1"
log = "0.4"
tokio-tungstenite = "0.10.1"
tokio = "0.2.11"
