[package]
name = "roa-websocket"
version = "0.5.0-beta"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
documentation = "https://docs.rs/roa-websocket"
homepage = "https://github.com/Hexilee/roa/wiki"
description = "websocket implementation for roa"
keywords = ["http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-beta" }
hyper = { version = "0.13", default-features = false, features = ["stream"] }
headers = "0.3.1"
log = "0.4"
tokio-tungstenite = "0.10.1"
tokio = "0.2.11"
futures = "0.3"

[dev-dependencies]
roa-core = { path = "../roa-core", version = "0.5.0-beta", features = ["tokio-rt"] }
roa-router = { path = "../roa-router", version = "0.5.0-beta" }