[package]
authors = ["Hexilee <i@hexilee.me>"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server",
]
description = """
async web framework inspired by koajs, lightweight but powerful.
"""
documentation = "https://docs.rs/roa"
edition = "2018"
homepage = "https://github.com/Hexilee/roa/wiki"
keywords = ["http", "web", "framework", "async"]
license = "MIT"
name = "roa"
readme = "./README.md"
repository = "https://github.com/Hexilee/roa"
version = "0.5.3"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
codecov = {repository = "Hexilee/roa"}

[dependencies]
async-trait = "0.1"
bytes = "1.0"
bytesize = "1.0"
futures = "0.3"
headers = "0.3"
hyper = {version = "0.14", default-features = false, features = ["stream"]}
lazy_static = "1.4.0"
log = "0.4"
percent-encoding = "2.1"
roa-core = {path = "../roa-core", version = "0.5"}
tokio = "1.4"
url = "2.1.1"

async-compression = {version = "0.3", features = ["all-algorithms", "stream"], optional = true}
async-std = {version = "1.9", optional = true}
cookie = {version = "0.15", features = ["percent-encode"], optional = true}
jsonwebtoken = {version = "7.2", optional = true}
serde = {version = "1", optional = true}
serde_json = {version = "1.0", optional = true}

# router
doc-comment = {version = "0.3", optional = true}
radix_trie = {version = "0.2", optional = true}
regex = {version = "1.4", optional = true}

# body
askama = {version = "0.10", optional = true}
mime_guess = {version = "2.0", optional = true}
serde_urlencoded = {version = "0.7", optional = true}

# websocket
tokio-tungstenite = {version = "0.14", default-features = false, optional = true}

# tcp
futures-timer = {version = "3.0", optional = true}

# tls
async-tls = {version = "0.11", optional = true}
rustls = {version = "0.19", optional = true}

[dev-dependencies]
askama = "0.10"
async-std = {version = "1.9", features = ["attributes"]}
chrono = "0.4"
encoding = "0.2"
hyper = "0.14"
hyper-tls = "0.5"
mime = "0.3"
multimap = "0.8"
pretty_env_logger = "0.4"
reqwest = {version = "0.11", features = ["json", "cookies", "gzip"]}
serde = {version = "1", features = ["derive"]}
slab = "0.4"
test-case = "1.1"
tokio = {version = "1.4", features = ["full"]}
tokio-tls = "0.3"

[features]
default = ["async_rt"]
full = [
  "default",
  "json",
  "urlencoded",
  "file",
  "template",
  "tls",
  "router",
  "jwt",
  "cookies",
  "compress",
  "websocket",
]

async_rt = ["runtime", "tcp"]
compress = ["async-compression"]
cookies = ["cookie"]
docs = ["full", "roa-core/docs"]
file = ["mime_guess", "async-std"]
json = ["serde", "serde_json"]
jwt = ["jsonwebtoken", "serde", "serde_json"]
router = ["radix_trie", "regex", "doc-comment"]
runtime = ["roa-core/runtime"]
tcp = ["async-std", "futures-timer"]
template = ["askama"]
tls = ["rustls", "async-tls"]
urlencoded = ["serde", "serde_urlencoded"]
websocket = ["tokio-tungstenite"]
